--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "modern-landing-page",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "vite"
+    "start": "vite"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +14,14 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.6"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SidddhantDeshpande/Bookmarks-Website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SidddhantDeshpande/Bookmarks-Website/issues"
+  },
+  "homepage": "https://github.com/SidddhantDeshpande/Bookmarks-Website#readme",
+  "description": ""
 }
